Got the footer items to arrange correctly. Need to adjust some spacing on elements, style the nav, and then we move on to stretch.

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -124,3 +124,7 @@ hr {
     width: 33%;
     padding: 5px;
 }
+
+footer p {
+    text-align: center;
+}
